k8s/traefik/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mern-app
  namespace: traefik
spec:
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          namespace: traefik
          port: 80

    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          namespace: traefik
          port: 80
